--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "husky": "^9.0.11",
+    "lint-staged": "^15.2.7",
     "prettier": "^3.3.2",
     "typescript": "^5"
   },
