--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "highcharts": "^11.4.4",
+    "highcharts-react-official": "^3.2.1",
     "next": "14.2.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
