--- a/.github/workflows/ci-in-devcontainer.yml
+++ b/.github/workflows/ci-in-devcontainer.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Export
+      - name: Build in DevContainer
         uses: devcontainers/ci@v0.3
         with:
           cacheFrom: k-taro56/population-trends-graph-devcontainer
