chore: Update vercel.json with $schema link for OpenAPI validation

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://openapi.vercel.sh/vercel.json",
   "cleanUrls": true,
   "framework": "nextjs",
   "installCommand": "pnpm install --frozen-lockfile --ignore-scripts"
