chore: Add "regions" field to vercel.json for deployment region configuration

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "cleanUrls": true,
   "framework": "nextjs",
-  "installCommand": "pnpm install --frozen-lockfile --ignore-scripts"
+  "installCommand": "pnpm install --frozen-lockfile --ignore-scripts",
+  "regions": ["hnd1"]
 }
